# squire

./: CHANGELOG.md  fourmolu.yaml  package.yaml  squire.cabal
src/: Backend.hs  MyLib.hs  Types.hs
src/Sql/: Query.hs  SqlType.hs  SqlValue.hs  Table.hs  Types.hs  Update.hs
src/Sql/Query/: Types.hs
src/Sql/SqlExpr/: Internal.hs
src/Sql/Table/: Columns.hs  TableCodec.hs  TableInfo.hs
src/Sql/Table/Columns/: TH.hs
